kubeportal/tests/fixtures/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  namespace: default
spec:
   rules:
   - host: "visbert.demo.datexis.com"
     http:
       paths:
       - path:
         backend:
           serviceName: visbert
           servicePort: 1337
