kubeportal/tests/fixtures/ingress1.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-ingress-1
  namespace: default
  annotations:
    foo: bar
    x: y
spec:
  tls:
  - secretName: "visbert-demo-subdomain-tls"
    hosts:
    - "visbert.demo.datexis.com"
  rules:
  - host: "visbert.demo.datexis.com"
    http:
      paths:
      - path:
        backend:
          serviceName: visbert
          servicePort: 1337
