kubeportal/tests/fixtures/ingress2.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-ingress-2
  namespace: default
spec:
   rules:
   - host: "tasty.demo.datexis.com"
     http:
       paths:
       - path:
         backend:
           serviceName: tasty
           servicePort: 1337
