kubeportal/tests/fixtures/service1.yml
apiVersion: v1
kind: Service
metadata:
  name: service1
  namespace: default
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376
